--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <nav>
     <img src="css/img/lyon1.png" alt="logo lyon 1" width="158" height="115" id="img_head" />
     <div id="menu">
-      <img src="css/ico/home.png"  alt="bouton acceuil" />
+      <img src="css/ico/home.png" alt="bouton acceuil" />
       <a href="index.html" class="lien_menu"><strong>Accueil</strong></a>
-      <img src="css/ico/phone.png"  alt="bouton applications" />
+      <img src="css/ico/phone.png" alt="bouton applications" />
       <a href="page_1.html" class="lien_menu"><strong>Applications</strong></a>
-      <img src="css/ico/tram.png"  alt="bouton transports" />
+      <img src="css/ico/tram.png" alt="bouton transports" />
       <a href="page_2.html" class="lien_menu"><strong>Transports Doux</strong></a>
     </div>
   </nav>
@@ -39,32 +39,33 @@
     </div>
     <div id="image_p1">
       <img src="css/img/course.jpg" alt="une personne cour" />
-      <img id="velo" src="css/img/velov.png" alt="image de vélov"/>
+      <img id="velo" src="css/img/velov.png" alt="image de vélov" />
     </div>
   </main>
 
   <footer>
-      <div id="footer_haut">
-        <img src="css/img/lyon1.png" alt="logo lyon1">
-        <div id="lien_externe">
-          <a href="https://www.univ-lyon1.fr/universite/organisation/universite-claude-bernard-lyon-1">Contacts</a>
-          <a href="https://www.univ-lyon1.fr/accessibilite">Accessibilité: non conforme</a>
-          <a href="https://www.univ-lyon1.fr/mentions-legales">Mentions légales</a>
-          <a href="https://www.univ-lyon1.fr/campus/plan-des-campus">Plan d'accès</a>
-        </div>
+    <div id="footer_haut">
+      <img src="css/img/lyon1.png" alt="logo lyon1">
+      <div id="lien_externe">
+        <a href="https://www.univ-lyon1.fr/universite/organisation/universite-claude-bernard-lyon-1">Contacts</a>
+        <a href="https://www.univ-lyon1.fr/accessibilite">Accessibilité: non conforme</a>
+        <a href="https://www.univ-lyon1.fr/mentions-legales">Mentions légales</a>
+        <a href="https://www.univ-lyon1.fr/campus/plan-des-campus">Plan d'accès</a>
       </div>
-
-    <div id="footer_bas">
-        <div id="logo_footer">
-          <a href="https://www.facebook.com/UnivLyon1"><img src="css/img/facebookicone.png" alt="facebook icone" /></a>
-          <a href="https://www.instagram.com/univlyon1/"><img src="css/img/instagramlogo.png"  alt="instagram icone" /></a>
-          <a href="https://twitter.com/UnivLyon1"><img src="css/img/logotwitter.png"  alt="twitter icone" /></a>
-          <a href="https://fr.linkedin.com/school/universite-lyon-1/"><img src="css/img/linkedinlogo.png" alt="linkedin icone" /></a>
-          <a href="https://www.youtube.com/@univlyon1"><img src="css/img/logoyoutube.png" alt="youtube icone" /></a>
-        </div>
     </div>
 
-      <p>© 2023 Dorel Maxime / Milan trzepalkowski</p>
+    <div id="footer_bas">
+      <div id="logo_footer">
+        <a href="https://www.facebook.com/UnivLyon1"><img src="css/img/facebookicone.png" alt="facebook icone" /></a>
+        <a href="https://www.instagram.com/univlyon1/"><img src="css/img/instagramlogo.png" alt="instagram icone" /></a>
+        <a href="https://twitter.com/UnivLyon1"><img src="css/img/logotwitter.png" alt="twitter icone" /></a>
+        <a href="https://fr.linkedin.com/school/universite-lyon-1/"><img src="css/img/linkedinlogo.png"
+            alt="linkedin icone" /></a>
+        <a href="https://www.youtube.com/@univlyon1"><img src="css/img/logoyoutube.png" alt="youtube icone" /></a>
+      </div>
+    </div>
+
+    <p>© 2023 Dorel Maxime / Milan trzepalkowski</p>
   </footer>
 </body>
 
