--- a/page_1.html
+++ b/page_1.html
@@ -29,69 +29,71 @@
   <main>
     <div id="main_haut">
 
-    <div class="elem_gauche">
-      <div class="align_elem">
-        <img src="css/img/vélovp2.png" alt="Application permmettant de prendre un vélo">
-        <p>Besoin de se déplacer rapidement sans prendre les transports en commun, venez louer un vélo!</p>
+      <div class="elem_gauche">
+        <div class="align_elem">
+          <img src="css/img/vélovp2.png" alt="Application permmettant de prendre un vélo">
+          <p>Besoin de se déplacer rapidement sans prendre les transports en commun, venez louer un vélo!</p>
+        </div>
+
+        <div class="align_elem">
+          <img src="css/img/dottp2.png" alt="Application permmettant de prendre une trotinette">
+          <p>Envie de vous déplacer en trotinette élétrique venez en loué une !</p>
+        </div>
+
+        <div class="align_elem">
+          <img src="css/img/tcllivep2.png"
+            alt="Application permmettant de consulter avec précision les transports en commun lyonnais">
+          <p>Avec cette application, consulter avec plus de précison l’arrivée d’un transport en commun lyonnais.</p>
+        </div>
       </div>
 
-      <div class="align_elem">
-        <img src="css/img/dottp2.png" alt="Application permmettant de prendre une trotinette">
-        <p>Envie de vous déplacer en trotinette élétrique venez en loué une !</p>
-      </div>
+      <div class="elem_droit">
+        <div class="align_elem">
+          <img src="css/img/opalep2.png"
+            alt="Application permmettant de trouver avec précision les bâtiments dans la doua">
+          <p>Vous avez du mal à vous repérer dans la doua? Avec opale, découvrez tous les batiments de la doua!</p>
+        </div>
 
-      <div class="align_elem">
-        <img src="css/img/tcllivep2.png"
-          alt="Application permmettant de consulter avec précision les transports en commun lyonnais">
-        <p>Avec cette application, consulter avec plus de précison l’arrivée d’un transport en commun lyonnais.</p>
+        <div class="align_elem">
+          <img src="css/img/tcllyon.jpg" alt="Application permmetant de trouver un transports en commun lyonnais">
+          <p>Envie de se déplacer rapidement dans Lyon, essayer les transports en commun lyonnais.</p>
+        </div>
+
       </div>
     </div>
 
-    <div class="elem_droit">
-      <div class="align_elem">
-        <img src="css/img/opalep2.png"
-          alt="Application permmettant de trouver avec précision les bâtiments dans la doua">
-        <p>Vous avez du mal à vous repérer dans la doua? Avec opale, découvrez tous les batiments de la doua!</p>
+
+    <h2>N’oubliez pas de répondre à ce formulaire pour nous aider à améliorer le site:</h2>
+    <form action="https://perso.liris.cnrs.fr/pierre-antoine.champin/enseignement/intro-web/_static/formproc/debug"
+      method="POST">
+
+      <div id="input">
+        <label for="nom">Nom</label>
+        <input type="text" name="nom" id="nom" placeholder="Ecrivez votre nom ici :" class="input_txt">
+
+        <label for="Prénom">Prénom</label>
+        <input type="text" name="Prénom" id="Prénom" placeholder="Ecrivez votre Prénom ici :" class="input_txt">
+
+        <label for="E-mail">E-mail</label>
+        <input type="text" name="E-mail" id="E-mail" placeholder="Ecrivez votre E-mail ici :" class="input_txt">
       </div>
 
-      <div class="align_elem">
-        <img src="css/img/tcllyon.jpg" alt="Application permmetant de trouver un transports en commun lyonnais">
-        <p>Envie de se déplacer rapidement dans Lyon,  essayer les transports en commun lyonnais.</p>
+
+      <div id="questionnaire">
+        <ul>
+          <li>Pensez-vous que le site est facilement compréhensible? oui<input type="checkbox" name="oui" /> non<input
+              type="checkbox" name="non" /> </li>
+          <li>Ce site vous à-t-il fait découvrir l’existence des trasnports doux? oui<input type="checkbox"
+              name="oui" />
+            non<input type="checkbox" name="non" /> </li>
+          <li>Utilisez vous des transports non-motorisé pour vous déplacer? oui<input type="checkbox" name="oui" />
+            non<input type="checkbox" name="non" /> </li>
+        </ul>
       </div>
 
-    </div>
-  </div>
-
-
-  <h2>N’oubliez pas de répondre à ce formulaire pour nous aider à améliorer le site:</h2>
-  <form action="https://perso.liris.cnrs.fr/pierre-antoine.champin/enseignement/intro-web/_static/formproc/debug" method="POST">
-
-  <div id="input">
-      <label for="nom">Nom</label> 
-      <input type="text" name="nom" id="nom" placeholder="Ecrivez votre nom ici :" class="input_txt">
-
-      <label for="Prénom">Prénom</label> 
-      <input type="text" name="Prénom" id="Prénom" placeholder="Ecrivez votre Prénom ici :" class="input_txt">
-
-      <label for="E-mail">E-mail</label> 
-      <input type="text" name="E-mail" id="E-mail" placeholder="Ecrivez votre E-mail ici :" class="input_txt"> 
-  </div>
-
-
-  <div id="questionnaire">
-    <ul>
-      <li>Pensez-vous que le site est facilement compréhensible? oui<input type="checkbox" name="oui" /> non<input
-          type="checkbox" name="non" /> </li>
-      <li>Ce site vous à-t-il fait découvrir l’existence des trasnports doux? oui<input type="checkbox" name="oui" />
-        non<input type="checkbox" name="non" /> </li>
-      <li>Utilisez vous des transports non-motorisé pour vous déplacer? oui<input type="checkbox" name="oui" />
-        non<input type="checkbox" name="non" /> </li>
-    </ul>
-  </div>
-
-    <button type="submit" id="BT_submit">Envoyer</button>
-    <input type="hidden" name="source" value="Formulaire_laDoua">
-  </form>
+      <button type="submit" id="BT_submit">Envoyer</button>
+      <input type="hidden" name="source" value="Formulaire_laDoua">
+    </form>
 
   </main>
 
@@ -109,18 +111,19 @@
       </div>
     </div>
 
-  <div id="footer_bas">
+    <div id="footer_bas">
       <div id="logo_footer">
         <a href="https://www.facebook.com/UnivLyon1"><img src="css/img/facebookicone.png" alt="facebook icone" /></a>
-        <a href="https://www.instagram.com/univlyon1/"><img src="css/img/instagramlogo.png"  alt="instagram icone" /></a>
-        <a href="https://twitter.com/UnivLyon1"><img src="css/img/logotwitter.png"  alt="twitter icone" /></a>
-        <a href="https://fr.linkedin.com/school/universite-lyon-1/"><img src="css/img/linkedinlogo.png" alt="linkedin icone" /></a>
+        <a href="https://www.instagram.com/univlyon1/"><img src="css/img/instagramlogo.png" alt="instagram icone" /></a>
+        <a href="https://twitter.com/UnivLyon1"><img src="css/img/logotwitter.png" alt="twitter icone" /></a>
+        <a href="https://fr.linkedin.com/school/universite-lyon-1/"><img src="css/img/linkedinlogo.png"
+            alt="linkedin icone" /></a>
         <a href="https://www.youtube.com/@univlyon1"><img src="css/img/logoyoutube.png" alt="youtube icone" /></a>
       </div>
-  </div>
+    </div>
 
     <p>© 2023 Dorel Maxime / Milan trzepalkowski</p>
-</footer>
+  </footer>
 </body>
 
 </html>
