--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </nav>
 
   <header class="bg_head">
-    <h1>Découvrez les Transport Doux de lyon 1</h1>
+    <h1>Découvrez les Transports Doux de lyon 1</h1>
   </header>
   <main id="main1">
     <div>
