--- a/page_2.html
+++ b/page_2.html
@@ -22,7 +22,7 @@
         </div>
     </nav>
     <header id="bg_head_p2">
-        <h1>Les application et service Utile pour se deplacer</h1>
+        <h1>Les applications et service Utile pour se deplacer</h1>
     </header>
     <main>
 
@@ -31,8 +31,8 @@
                 <div class="card">
                     <img src="css/ico/bike.png" class="img_card" alt="Icône d'un vélo">
                     <h3>Le Vélo</h3>
-                    <p class="trajet">Traject: 10-15min</p>
-                    <p class="citation">“Envie de vous déplacer rapidement en vous changeants les idées” </p>
+                    <p class="trajet">trajet: 10-15min</p>
+                    <p class="citation">“Envie de vous déplacer rapidement en vous changeant les idées” </p>
                 </div>
 
                 <div class="card">
@@ -42,15 +42,15 @@
                             fill="#84E5A8" />
                     </svg>
                     <h3>La Marche</h3>
-                    <p class="trajet">Traject: 5-15min</p>
+                    <p class="trajet">trajet: 5-15min</p>
                     <p class="citation">“Profiter du paysage ,faite votre trajet à pied ”</p>
                 </div>
 
                 <div class="card">
                     <img src="css/ico/train.png" class="img_card" alt="Icône d'un train">
                     <h3>Train</h3>
-                    <p class="trajet">Traject: 45min-1h30</p>
-                    <p class="citation">“Pour les trajet de longue durée” </p>
+                    <p class="trajet">trajet: 45min-1h30</p>
+                    <p class="citation">“Pour les trajets de longue durée” </p>
                 </div>
 
                 <div class="card">
@@ -60,7 +60,7 @@
                             fill="#84E5A8" />
                     </svg>
                     <h3>Voiture Electrique</h3>
-                    <p class="trajet">Traject: 30min-1h</p>
+                    <p class="trajet">trajet: 30min-1h</p>
                     <p class="citation">“Pour un confort et durée agréable”</p>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 <div class="card">
                     <img src="css/ico/tramway.png" class="img_card" alt="">
                     <h3>Le Tramway</h3>
-                    <p class="trajet">Traject: 15-45min</p>
+                    <p class="trajet">trajet: 15-45min</p>
                     <p class="citation">“Pour un trajet rapide et confortable” </p>
                 </div>
 
@@ -81,7 +81,7 @@
                             fill="#84E5A8" />
                     </svg>
                     <h3>La Trottinette</h3>
-                    <p class="trajet">Traject: 15-25min</p>
+                    <p class="trajet">trajet: 15-25min</p>
                     <p class="citation">“Pour une durée limitée et en pratiquant une activité sportive”</p>
                 </div>
 
@@ -91,14 +91,14 @@
                         <img src="css/ico/roller.png" class="img_card" alt="">
                     </div>
                     <h3>Skate / Roller</h3>
-                    <p class="trajet">Traject: 10-20min</p>
+                    <p class="trajet">trajet: 10-20min</p>
                     <p class="citation">“Pour une durée courte tout en faisant du sport”</p>
                 </div>
 
                 <div class="card">
                     <img src="css/ico/cheval.png" class="img_card" alt="icône d'un cheval">
                     <h3>Le Cheval</h3>
-                    <p class="trajet">Traject: 20-35min</p>
+                    <p class="trajet">trajet: 20-35min</p>
                     <p class="citation">“Le cheval, le cheval c’est trop génial!”</p>
                 </div>
             </div>
